After Prof. Zhang's help, the latex file not completely changed.

--- a/SEA.tex
+++ b/SEA.tex
@@ -41,7 +41,7 @@
 \address[label2]{CIRCE Research Institute, University of Zaragoza, Maria de Luna, Zaragoza, Spain}
 
 \begin{abstract}
-The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. However, it is not widely deployed due to its existing drawbacks. This paper puts forward an effective way to overcome the drawbacks by using Stirling engine array (SEA) in new arrangements of the solar dish system. The SEA has multiple connection types. To find out the influence of connection type on the performance of SEA, five basic connection types were proposed and SEA analytical models were developed based on a proposed Stirling engine model. In the engine model, various losses and irreversibilities were analyzed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Based on the SEA models, global efficiency and power of different connection types of SEAs with the same hot and cold flows were evaluated. Effects of different factors on the performance of SEA were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
+The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. This paper puts forward new arrangements of the solar dish system by using Stirling engine array (SEA). The SEA has multiple connection types. To find out the influence of connection type on the performance of SEA, five basic connection types were proposed. A Stirling engine model considering various losses and irreversibilities were developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. SEA models were developed based on the Stirling engine model. Global efficiency and power of different connection types of SEAs with the same hot and cold flows were evaluated. Effects of different factors on the performance of SEA were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
 \end{abstract}
 
 \begin{keyword}Stirling cycle, Stirling engine model, Stirling engine array, connection type
@@ -55,15 +55,15 @@ The solar dish Stirling engine system is well known for its high light-to-electr
 %The Stirling engine was invented in 1816, however, its practical use was largely confined to low power domestic applications for over a century due to its small capacity~\cite{Formosa2010}. 
 With the emphasis on energy and environmental impact, recently gaining attention is focused on Stirling engine for its high efficiency, low maintenance requirement, flexibility on energy sources, no pollution, low explosion risk. Due to its closed cycle, it can use almost any heat source, which makes it compatible with alternative and renewable energy sources. 
 
-The Stirling engine is widely used on solar dish system, known as dish-Stirling system. In a traditional dish-Stirling system, each Stirling engines is put on the focus of a parabolic dish to use the heat collected by the dish receiver for power generation. However, dish-Stirling system has not received wide commercial deployment yet for their drawbacks. First, it is a solar-only generation system, without storage or simple hybridization. Compared with photovoltaics, which is also a solar-only generation system, dish Stirling could not compete in terms of reliability nor cost per unit of energy produced. Second, the Stirling engine capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it overlaps part of the collector.
+The Stirling engine is widely used on solar dish system, known as dish-Stirling system. In a traditional dish-Stirling system, each Stirling engines is put on the focus of a parabolic dish to use the heat collected by the dish receiver for power generation. However, dish-Stirling system has not received wide commercial deployment yet. It is a solar-only generation system, without storage or simple hybridization. Compared with photovoltaics, which is also a solar-only generation system, dish Stirling could not compete in terms of reliability nor cost per unit of energy produced. The Stirling engine capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it overlaps part of the collector.
 
-This paper presents new arrangements for dish-Stirling system demonstrated in Figure~\ref{fig:Dish_SEA} to overcome the drawbacks. In this figure, Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors
+Figure~\ref{fig:Dish_SEA} shows the new arrangement for dish-Stirling system proposed by this paper. In the new arrangement, Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors
 %, or other types of collectors, or combination of different types of collectors, even heat from different heat sources
- is supplied to the SEA by heating fluid. A heat storage system becomes feasible. Heat provided to the SEA may be provided by other types of collectors, combination of different types of collectors, or different kinds of heat sources. On the other hand, since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities.
+ is supplied to the SEA by heating fluid. The new arrangements have some advantages. Due to the heat transfer fluid, a heat storage system becomes feasible. Heat provided to the SEA may be provided by other types of collectors, combination of different types of collectors, or different kinds of heat sources. On the other hand, since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities.
 
 %Compared to the traditional arrangement, in which the Stirling engines are put on the focal points of each dish collector separately, 
 
-In the proposed arrangement, Stirling engines can be connected in different connection types, and their performance is relative with their connection type.
+In the proposed arrangement, Stirling engines can be connected in different connection types, and their performance is relative with their connection types.
 
 %The Stirling engines can be connected in a different connection type and their performance may be improved compared to the traditional arrangement in which they are put on the focal points of each dish collector separately.
 
@@ -735,11 +735,11 @@ For a certain connection type, increase $n_{se}$ will reduce the efficiency of S
 
 \section{Conclusion}
 
-A new way to overcome the drawbacks of traditional dish-Stirling system by using SEA was proposed in this paper. Connection type of the engines may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different connections, five basic connection types of SEA were summed up according to flow type and flow order. 
+New arrangements of the solar dish system by using SEA were proposed in this paper. Connection type of the engines may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different connections, five basic connection types of SEA were summed up according to flow type and flow order. 
 
 Analytical Stirling engine model was created to develop the SEA models for the investigation of influence of connection types. Imperfect regeneration and cycle irreversibility of Stirling engine cycle and heat exchange process between fluids and engine were considered in the model. Algorithm to numerically solve different connection types of SEA was developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Result shows that the proposed model predicted the performance with higher accuracy than Simple model~\cite{Urieli1984} and Simple II model~\cite{Strauss2010}. 
 
-Models of SEAs were developed to calculated the performance under different parameters to find out the impacts of $T_{i,h}$, $q_{m,h}c_{p,h}$, $q_{m,c}c_{p,c}$ and $n_{se}$ on different connection types. It was found that, as expected, decrease $T_{i,h}$ and $q_{m}c_{p}$ will weaken the performance of SEA of all connection types. However, for some connection types, there exists a critical temperature below which some engines stop working. This needs to be considered for SEA connection type selection, especially when $T_{i,h}$ is low. For given heating and cooling fluids, Type 2 has the best performance and adaptability. Type 2 and Type 3 have similar performance under different parameters ($T_{i,h}$, $T_{i,c}$ and $q_mc_p$), which means the flow order has little influence on the performance of an SEA. SEA of serial flows has the best performance and adaptability under different parameters. Given heating and cooling fluids, using serial flow is the best choice for the connection type of an SEA. %This means the new arrangement of dish-Stirling system in Figure~\ref{fig:Dish_SEA} may have better performance than the traditional arrangement, which can be considered as a particular case of Type 1.
+Models of SEAs were developed to calculated the performance under different parameters to find out the impacts of $T_{i,h}$, $q_{m,h}c_{p,h}$, $q_{m,c}c_{p,c}$ and $n_{se}$ on different connection types. It was found that, as expected, decrease $T_{i,h}$ and $q_{m}c_{p}$ will weaken the performance of SEA of all connection types. However, for some connection types, there exists a critical temperature below which some engines stop working. This needs to be considered for SEA connection type selection, especially when $T_{i,h}$ is low. For given heating and cooling fluids, Type 2 has the best performance and adaptability. Type 2 and Type 3 have similar performance under different parameters ($T_{i,h}$, $T_{i,c}$ and $q_mc_p$), which means the flow order has little influence on the performance of an SEA. SEA of serial flows (Type 3) has the best performance and adaptability under different parameters. Given heating and cooling fluids, using serial flow is the best choice for the connection type of an SEA. %This means the new arrangement of dish-Stirling system in Figure~\ref{fig:Dish_SEA} may have better performance than the traditional arrangement, which can be considered as a particular case of Type 1.
 
 It is important to note that, in the future researches, the experiments of influence of connection type on SEA's performance can be carried out to verify the conclusions in this paper.
 %It should be pointed out that there exists some discrepancy between the the simulation results of proposed model and the experimental data. Experiments of SEAs need to be carried out to verify the conclusions in this paper in the future. 
