--- a/Highlights.tex
+++ b/Highlights.tex
@@ -1,8 +1,13 @@
 \documentclass[12pt]{letter}
 
+
+
 \begin{document}
+
+\title{Hightlights}
+
 \begin{enumerate}
-\item A novel idea of to overcome the drawbacks of dish-Stirling system was proposed.
+\item A new layout scheme of dish-Stirling system was proposed.
 
 \item Five basic connection types of Stirling engine array were summarized.
 
