Updated the latex file.

--- a/SEA.tex
+++ b/SEA.tex
@@ -25,7 +25,7 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Performance comparison of new arrangements of a dish-Stirling system}
+\title{Performance analysis of different arrangements of a new layout dish-Stirling system}
 \date{}
 \author[label1]{Cheng Zhang}
 \author[label1]{Yanping Zhang\corref{cor1}}
@@ -41,7 +41,7 @@
 \address[label2]{CIRCE Research Institute, University of Zaragoza, Maria de Luna, Zaragoza, Spain}
 
 \begin{abstract}
-The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. This paper puts forward new arrangements of the solar dish system by using Stirling engine array (SEA). The SEA has multiple connection types. To find out the influence of connection type on the performance of SEA, five basic connection types were proposed. A Stirling engine model considering various losses and irreversibilities were developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. SEA models were developed based on the Stirling engine model. Global efficiency and power of different connection types of SEAs with the same hot and cold flows were evaluated. Effects of different factors on the performance of SEA were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
+The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. This paper puts forward a new layout scheme of the solar dish system by using Stirling engine array (SEA). The SEA has multiple connection types. To find out the influence of connection type on the performance of SEA, five basic connection types were proposed. A Stirling engine model considering various losses and irreversibilities were developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. SEA models were developed based on the Stirling engine model. Global efficiency and power of different connection types of SEAs with the same hot and cold flows were evaluated. Effects of different factors on the performance of SEA were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
 \end{abstract}
 
 \begin{keyword}Stirling cycle, Stirling engine model, Stirling engine array, connection type
@@ -53,32 +53,10 @@ The solar dish Stirling engine system is well known for its high light-to-electr
 
 \section{Introduction}
 %The Stirling engine was invented in 1816, however, its practical use was largely confined to low power domestic applications for over a century due to its small capacity~\cite{Formosa2010}. 
-With the emphasis on energy and environmental impact, recently gaining attention is focused on Stirling engine for its high efficiency, low maintenance requirement, flexibility on energy sources, no pollution, low explosion risk. Due to its closed cycle, it can use almost any heat source, which makes it compatible with alternative and renewable energy sources. 
+With the emphasis on energy and environmental impact, recently gaining attention is focused on Stirling engine for its high efficiency, low maintenance requirement, flexibility on energy sources, no pollution, low explosion risk. Due to its closed cycle, it can use almost any heat source, which makes it compatible with alternative and renewable energy sources. The Stirling engine is widely used on solar dish system, known as dish-Stirling system. In a traditional dish-Stirling system, each Stirling engines is put on the focus of a parabolic dish to use the heat collected by the dish receiver for power generation. 
 
-The Stirling engine is widely used on solar dish system, known as dish-Stirling system. In a traditional dish-Stirling system, each Stirling engines is put on the focus of a parabolic dish to use the heat collected by the dish receiver for power generation. However, dish-Stirling system has not received wide commercial deployment yet. It is a solar-only generation system, without storage or simple hybridization. Compared with photovoltaics, which is also a solar-only generation system, dish Stirling could not compete in terms of reliability nor cost per unit of energy produced. The Stirling engine capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it overlaps part of the collector.
-
-Figure~\ref{fig:Dish_SEA} shows the new arrangement for dish-Stirling system proposed by this paper. In the new arrangement, Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors
-%, or other types of collectors, or combination of different types of collectors, even heat from different heat sources
- is supplied to the SEA by heating fluid. The new arrangements have some advantages. Due to the heat transfer fluid, a heat storage system becomes feasible. Heat provided to the SEA may be provided by other types of collectors, combination of different types of collectors, or different kinds of heat sources. On the other hand, since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities.
-
-%Compared to the traditional arrangement, in which the Stirling engines are put on the focal points of each dish collector separately, 
-
-In the proposed arrangement, Stirling engines can be connected in different connection types, and their performance is relative with their connection types.
-
-%The Stirling engines can be connected in a different connection type and their performance may be improved compared to the traditional arrangement in which they are put on the focal points of each dish collector separately.
-
-%The Stirling engine is widely used on solar dish system, in which it is put on the focus of parabolic dish to use the heat collected by the dish receiver for power generation. However, solar dish systems are not widely applied yet for its small capacity. Its capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it will overlap part of the collector. This paper presents a solution demonstrated in Figure~\ref{fig:Dish_SEA}. Heat collected by multiple dish collectors, or other types of collectors, or combination of different types of collectors, even heat from different heat sources can be used for a Stirling engine array (SEA). Stirling engines are put on the ground as static installations where space and weight are not at a premium any more. The engines can reach higher capacities, they can be connected in a different connection type and their performance may be improved.
-\nomenclature[C]{SEA}{Stirling engine array}
-
-\noindent \begin{figure}[htbp]
-\begin{center}
-	\includegraphics[width = 0.7\columnwidth]{./graphics/Dish_SEA.pdf}
-	\caption{New arrangement of dish-Stirling system}
-	\label{fig:Dish_SEA}
-\end{center}
-\end{figure}
-
-Great attention has focused on the application using parabolic dish to collect heat. Some researchers investigated the impact of various parameters on the optical and thermal performance of the solar dish receivers using Monte Carlo Ray Tracing Method (MCRTM) and/or numerical modeling methods~\cite{Cheng2013,Mao2014,Wang2010,Wang2013,Zhu2015,Sha2016,Daabo2016}. Some researchers considered the applications with different ways to use the collected heat. Loni et al.~\cite{Loni2016} considered a system using parabolic dish for an organic Rankine cycle. In the proposed system, thermal oil is used as the working fluid to transport the collected heat for the organic Rankine cycle. Wang et al.~\cite{Wang2014} proposed an inverse design method for a cavity receiver used in solar dish Brayton system. Craig et al.~\cite{Craig2016} evaluated a parabolic dish tubular receiver used in a dish Brayton cycle. An approach for incorporating a complex geometry like a tubular receiver generated using CFD software into SolTrace was developed. Aichmayer et al.~\cite{Aichmayer2015} presented a hybrid solar micro gas-turbine system integrating volumetric solar dish receiver. Concerning the solar dish receiver integration, both pressurized and atmospheric configurations have been considered. Lovegrove et al.~\cite{Lovegrove2004} presented an idea of using parabolic dish array to provide heat for ammonia based thermochemical energy storage. In this regard, using parabolic dishes to provide heat for SEA is applicable.
+Great attention has focused on the application using parabolic dish to collect heat. Some researchers investigated the impact of various parameters on the optical and thermal performance of the solar dish receivers using Monte Carlo Ray Tracing Method (MCRTM) and/or numerical modeling methods.%~\cite{Cheng2013,Mao2014,Wang2010,Wang2013,Zhu2015,Sha2016,Daabo2016}. 
+Some researchers considered the applications with different ways to use the collected heat. Loni et al.~\cite{Loni2016} considered a system using parabolic dish for an organic Rankine cycle. In the proposed system, thermal oil is used as the working fluid to transport the collected heat for the organic Rankine cycle. Wang et al.~\cite{Wang2014} proposed an inverse design method for a cavity receiver used in solar dish Brayton system. Craig et al.~\cite{Craig2016} evaluated a parabolic dish tubular receiver used in a dish Brayton cycle. An approach for incorporating a complex geometry like a tubular receiver generated using CFD software into SolTrace was developed. Aichmayer et al.~\cite{Aichmayer2015} presented a hybrid solar micro gas-turbine system integrating volumetric solar dish receiver. Concerning the solar dish receiver integration, both pressurized and atmospheric configurations have been considered. Lovegrove et al.~\cite{Lovegrove2004} presented an idea of using parabolic dish array to provide heat for ammonia based thermochemical energy storage. In this regard, using parabolic dishes to provide heat for SEA is applicable.
 
 A large number of studies have been done on Stirling engine analysis. To describe a Stirling engine's behavior precisely is a difficult task due to the various losses and irreversibilities in the engine.
 %Recent investigations~\cite{Tlili2006,Li2016} have found that these losses and irreversibilities in the thermodynamic cycle have significant importance in predicting the performance of Stirling engines. 
@@ -117,7 +95,28 @@ Luo et al.~\cite{Luo2016} proposed a multiple optimization method that combines 
 
 %There are multiple connection types for Stirling engines in an SEA, and the connection type will change the heating and cooling fluid properties, such as flow rate and temperature, of each Stirling engine in an SEA, which can affect the efficiency of each Stirling engine. So the same Stirling engines with the same heating and cooling fluid may produce different amount of work with different thermal efficiencies depending on their connection types.
 
-However, the literature review indicates that the analysis of arrangements of Stirling engines, classification and performance of the SEA, has not been reported till now. In this regard, this paper investigated the connection types of SEA and its influence on SEA performance. According to Organ's theory~\cite{Organ1997}, one equivalent analytical Stirling engine model always exists for different types ($\alpha$ type, $\beta$ type and $\gamma$ type) of engines. To find out the influence of connection type of SEA and to avoid falling into the problem of developing specific Stirling engine model, a Stirling engine model based on some assumptions and simplifications was developed. This model was evaluated using experimental data of the General Motor GPU-3 Stirling engine prototype. Imperfect regeneration and some irreversibilities were considered. Heat transfer analysis of Stirling engine with heating and cooling fluids was also included. SEA models of different connection types were built depending on the engine model. Impacts of different parameters on the performance of these models were analyzed.
+However, dish-Stirling system has not received wide commercial deployment yet. It is a solar-only generation system, without storage or simple hybridization. Compared with photovoltaics, which is also a solar-only generation system, dish Stirling could not compete in terms of reliability nor cost per unit of energy produced. The Stirling engine capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it overlaps part of the collector.
+
+This paper presents a new layout scheme of dish-Stirling system demonstrated in Figure~\ref{fig:Dish_SEA}. In the new scheme, Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors
+%, or other types of collectors, or combination of different types of collectors, even heat from different heat sources
+ is supplied to the SEA by heating fluid. The new scheme has some advantages. Due to the heat transfer fluid, a heat storage system becomes feasible. Heat provided to the SEA may be provided by other types of collectors, combination of different types of collectors, or different kinds of heat sources. On the other hand, since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities.
+
+%Compared to the traditional arrangement, in which the Stirling engines are put on the focal points of each dish collector separately, 
+
+%The Stirling engines can be connected in a different connection type and their performance may be improved compared to the traditional arrangement in which they are put on the focal points of each dish collector separately.
+
+%The Stirling engine is widely used on solar dish system, in which it is put on the focus of parabolic dish to use the heat collected by the dish receiver for power generation. However, solar dish systems are not widely applied yet for its small capacity. Its capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it will overlap part of the collector. This paper presents a solution demonstrated in Figure~\ref{fig:Dish_SEA}. Heat collected by multiple dish collectors, or other types of collectors, or combination of different types of collectors, even heat from different heat sources can be used for a Stirling engine array (SEA). Stirling engines are put on the ground as static installations where space and weight are not at a premium any more. The engines can reach higher capacities, they can be connected in a different connection type and their performance may be improved.
+\nomenclature[C]{SEA}{Stirling engine array}
+
+\noindent \begin{figure}[htbp]
+\begin{center}
+	\includegraphics[width = 0.7\columnwidth]{./graphics/Dish_SEA.pdf}
+	\caption{New layout scheme of dish-Stirling system}
+	\label{fig:Dish_SEA}
+\end{center}
+\end{figure}
+
+In the proposed scheme, Stirling engines can be connected in different connection types, and their performance is relative with their connection types according to their arrangements. However, the literature review indicates that the analysis of arrangements of Stirling engines, classification and performance of the SEA, has not been reported till now. In this regard, this paper investigated the connection types of SEA and its influence on SEA performance. According to Organ's theory~\cite{Organ1997}, one equivalent analytical Stirling engine model always exists for different types ($\alpha$ type, $\beta$ type and $\gamma$ type) of engines. To find out the influence of connection type of SEA and to avoid falling into the problem of developing specific Stirling engine model, a Stirling engine model based on some assumptions and simplifications was developed. This model was evaluated using experimental data of the General Motor GPU-3 Stirling engine prototype. Imperfect regeneration and some irreversibilities were considered. Heat transfer analysis of Stirling engine with heating and cooling fluids was also included. SEA models of different connection types were built depending on the engine model. Impacts of different parameters on the performance of these models were analyzed.
 
 \section{Connection types of SEA~\label{sec:connectionTypes}}
 For a single Stirling engine, the heat transfer processes between fluids and engine are independent and irrelevant with the direction of the flows, which means the efficiency and power are not affected by the direction of fluids. However, for an SEA, the connection type will affect the temperature profiles through the array and the specific work production, both of which will determine the efficiency and power of the SEA. It is practically significant to investigate the influence of connection type of an SEA on its performance. Using parallel flow, on the one hand, will reduce the flow rate of the fluid, which will reduce the power of each engine; however, on the other hand, will take the advantage of higher inlet heating fluid temperature (or lower inlet cooling fluid temperature), which may increase the power of each engine. friend who is Using serial flow, on the one hand, will increase the flow rate of the fluid, which will increase the power of each engine; however, on the other hand, the inlet heating fluid temperature reduces with the flow direction (or the inlet cooling fluid temperature increases with the flow direction), which leads to lower engine power along the flow direction. Using the same order will lead to largest fluid temperature difference (temperature difference of the heating and cooling fluids) at the first engines and smallest fluid temperature difference at the last engines. Using the reverse order will lead to more averaged fluid temperature differences of the engines. For a heat exchanger, the reverse order (counterflow), which leads to a smaller fluid temperature difference, has a better heat transfer effect for its lower exergy loss. However, for a Stirling engine, the smaller fluid temperature difference leads to lower performance due to the lower temperature difference of the working gas in the hot space and cold space. To find out the influence of connection types on the performance of SEA, it is essential to classify the connection types.
@@ -735,7 +734,7 @@ For a certain connection type, increase $n_{se}$ will reduce the efficiency of S
 
 \section{Conclusion}
 
-New arrangements of the solar dish system by using SEA were proposed in this paper. Connection type of the engines may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different connections, five basic connection types of SEA were summed up according to flow type and flow order. 
+A new layout scheme of the solar dish system by using SEA were proposed in this paper. Connection type of the engines may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different arrangements, five basic connection types of SEA were summed up according to flow type and flow order. 
 
 Analytical Stirling engine model was created to develop the SEA models for the investigation of influence of connection types. Imperfect regeneration and cycle irreversibility of Stirling engine cycle and heat exchange process between fluids and engine were considered in the model. Algorithm to numerically solve different connection types of SEA was developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Result shows that the proposed model predicted the performance with higher accuracy than Simple model~\cite{Urieli1984} and Simple II model~\cite{Strauss2010}. 
 
