Paper modified and submitted to the journals. (with Word version)

--- a/SEA.bib
+++ b/SEA.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for hustquick at 2016-12-26 14:31:41 +0800 
+%% Created for 张成 at 2017-04-03 23:32:02 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bell2014,
+	Author = {Bell, Ian H. and Wronski, Jorrit and Quoilin, Sylvain and Lemort, Vincent},
+	Date-Added = {2017-04-03 15:28:28 +0000},
+	Date-Modified = {2017-04-03 15:28:42 +0000},
+	Doi = {10.1021/ie4033999},
+	Eprint = {http://pubs.acs.org/doi/pdf/10.1021/ie4033999},
+	Journal = {Industrial \& Engineering Chemistry Research},
+	Number = {6},
+	Pages = {2498--2508},
+	Title = {Pure and Pseudo-pure Fluid Thermophysical Property Evaluation and the Open-Source Thermophysical Property Library CoolProp},
+	Url = {http://pubs.acs.org/doi/abs/10.1021/ie4033999},
+	Volume = {53},
+	Year = {2014},
+	Bdsk-Url-1 = {http://pubs.acs.org/doi/abs/10.1021/ie4033999},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1021/ie4033999}}
 
 @article{Wang2002,
 	Abstract = {An irreversible cycle model of the Stirling refrigeration-cycle, using a ferroelectric material as the working substance, is established. Several irreversibilities due to thermal resistances between the working substance and the heat reservoirs, regenerative losses in two regenerative processes, and heat-leak loss between the heat reservoirs are taken into account. The influence of these irreversible losses on the performance of the ferroelectric Stirling refrigeration-cycle is analyzed, based on a general expression of the polarization of ferroelectric materials and a linear heat-transfer law. The cooling rate is optimized for a given power input. Some fundamental optimal relations and general performance characteristic curves of the cycle are obtained. The maximum cooling rate and other relevant performance parameters are determined. Some special cases are discussed in detail. When the regenerative losses are neglected, the results obtained may be directly used to describe the optimal performance of a ferroelectric Carnot refrigeration-cycle. Moreover, it is expounded that the calculated results are very general and also suitable for the ferroelectric Stirling and Carnot refrigeration cycles whose working substances obey the Curie--Weiss law and Curie law. },
