Try to use ignore file.

--- a/SEA.tex
+++ b/SEA.tex
@@ -25,7 +25,7 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Performance analysis of different arrangements of a new layout dish-Stirling system}
+\title{Configuration optimization of Stirling engine array in a cascade system}
 \date{}
 \author[label1]{Cheng Zhang}
 \author[label1]{Yanping Zhang\corref{cor1}}
